--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "axios": "^1.6.5",
     "bootstrap-icons": "^1.11.2",
     "marked": "^11.1.0",
+    "re-resizable": "^6.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-resizable": "^3.0.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
