--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-server": "node backend/server.js --port 3001",
-    "start-both": "npm-run-all --parallel start start-server"
+    "start-game": "npm-run-all --parallel start start-server"
   },
   "eslintConfig": {
     "extends": [
